--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -189,6 +189,7 @@ align-items: center;
     color: var(--additional--color);
     border-radius: 4px;
     cursor: pointer;
+    border-color: transparent;
 
     margin-top: 30px;
     transition: color var(--animation-transition);
@@ -725,4 +726,62 @@ background-position: center;
   .modal-close {
     height: 18px;
     width: 18px;
+  }
+
+  /*Футер форма підписки*/
+
+  .container-subscription {
+    margin-left: 93px;
+  }
+  .form-title {
+    margin-bottom: 20px;
+  
+    text-transform: uppercase;
+    color: var(--additional--color);
+  }
+  .footer-form {
+    display: flex;
+  }
+  .footer-email-input {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.25;
+  
+    /* identical to box height, or 125% */
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.03em;
+  
+    color: rgba(255, 255, 255, 0.6);
+  
+    width: 358px;
+    padding-left: 16px;
+  
+    background-color: rgba(0, 0, 0, 0);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 4px;
+  }
+  .footer-btn-subscrib {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-left: 12px;
+    min-width: 200px;
+  
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+
+    background-color: var(--backgraund-btn-color);
+    color: var(--additional--color);
+    border-radius: 4px;
+    border-color: transparent;
+    transition: color var(--animation-transition);
+  }
+  .icon-subscribe {
+    margin-left: 10px;
+    fill: var(--additional--color);
   }
