--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -20,6 +20,9 @@
     /*Модальне вікно*/
     --backdrop-bgc: rgba(0, 0, 0, 0.2);
     --white-bgc: #ffffff;
+
+    --form-order-focus-fill: #2196f3;
+    --blue-bgc: #2196f3;
 }
 
 body {
@@ -679,55 +682,6 @@ background-position: center;
   color: var(--additional--color);
   opacity: 0;
 }
-
-/*Модальне вікно*/
-
-.backdrop {
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    transition: opacity var(--animation-transition), visibility var(--animation-transition);
-    background: var(--backdrop-bgc);
-    z-index: 5;
-  }
-  .is-hidden {
-    visibility: hidden;
-    opacity: 0;
-    pointer-events: none;
-  }
-  .modal {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 528px;
-    height: 581px;
-    background-color: var(--white-bgc);
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-      0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 4px;
-  }
-  .closes {
-    position: absolute;
-    top: 8px;
-    right: 8px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 30px;
-    height: 30px;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    border-radius: 50%;
-    background: transparent;
-    cursor: pointer;
-  }
-  .modal-close {
-    height: 18px;
-    width: 18px;
-  }
-
   /*Футер форма підписки*/
 
   .container-subscription {
@@ -785,3 +739,201 @@ background-position: center;
     margin-left: 10px;
     fill: var(--additional--color);
   }
+
+  /*Модальне вікно*/
+  .backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 5;
+  
+    transition: opacity var(--animation-transition), visibility var(--animation-transition);
+  
+    background-color: var(--backdrop-bgc);
+  }
+
+  .backdrop.is-hidden {
+    opacity: 0;
+    pointer-events: none;
+    visibility: hidden;
+  }
+
+  .modal-order {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  
+    min-width: 528px;
+    min-height: 581px;
+    padding: 40px;
+  
+    background-color: var(--backgraund--general-color);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+      0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+  }
+  .btn-close-modal {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 30px;
+    height: 30px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+    background: transparent;
+    cursor: pointer;
+    fill: #000000;
+  
+    transition: fill var(--animation-transition);
+  }
+  .btn-close-modal:hover,
+  .btn-close-modal:focus {
+    fill: var(--backgraund-btn-color);
+  }
+
+  /*Фома в модальному вікні для замовлення послуг*/
+
+  .form-modal-order {
+    display: flex;
+    flex-direction: column;
+  }
+  .title-form {
+    margin-bottom: 12px;
+  
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 1.15;
+    text-align: center;
+    color: var(--txt-color);
+  }
+  /* Коробки input */
+  .comment-box {
+    margin-bottom: 20px;
+  }
+
+  /*SVG іконки в формі*/
+  .form-field {
+    position: relative;
+    margin-bottom: 10px;
+  }
+  .svg-form {
+    position: absolute;
+    top: 52%;
+    left: 12px;
+    transform: translateY(-50%);
+  
+    transition: fill var(--animation-transition);
+  }
+
+  /*Кастимізація input*/
+  .input-form-order {
+    padding-top: 11px;
+    padding-right: 12px;
+    padding-bottom: 11px;
+    padding-left: 12px;
+  
+    width: 100%;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+  
+    transition: border var(--animation-transition);
+  }
+  .input-form-order:not(:last-child) {
+    padding-left: 42px;
+  }
+
+  /*Стилізація для lable*/
+
+  .name-input-order {
+    display: block;
+    text-align: start;
+    margin-bottom: 4px;
+  
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
+  }
+  
+  .input-form-order {
+    display: block;
+    padding-left: 42px;
+  }
+  
+  .input-form-order:focus {
+    border: 1px solid var(--accent-color);
+  }
+  .input-form-order:focus ~ .svg-form {
+    fill: var(--form-order-focus-fill);
+  }
+
+  /*Checkbox Соглашаюсь с рассылкой и принимаю
+Условия договора*/
+.text-checkbox-order {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 12px;
+    margin-right: 12px;
+    margin-bottom: 30px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+  }
+  .checkbox-policy {
+    appearance: none;
+    position: absolute;
+  }
+  .svg-checkbox {
+    display: inline-block;
+    width: 16px;
+    height: 15px;
+  
+    border: 2px solid #212121;
+    border-radius: 4px;
+    margin-right: 7px;
+  
+    transition: border-color var(--animation-transition), background-color var(--animation-transition),
+      background-image var(--animation-transition);
+  }
+  .checkbox-policy:checked + .svg-checkbox {
+    border-color: transparent;
+    background-color: var(--blue-bgc);
+    background-image: url(../images/icon/check-lable.svg);
+    background-size: contain;
+    background-origin: border-box;
+  }
+  .checkbox-policy:focus + .svg-checkbox {
+    border-color: var(--blue-bgc);
+  }
+  .link-policy {
+    text-decoration: underline;
+    color: var(--accent-color);
+  }
+
+  /*Кнопка замовлення в мадальному вікні*/
+  .btn-modal-form-order {
+    width: 200px;
+    padding-top: 10px;
+    padding-right: 55px;
+    padding-bottom: 10px;
+    padding-left: 55px;
+    margin-right: auto;
+    margin-left: auto;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.89;
+  
+    transition: background-color var(--animation-transition);
+  }
+  .btn-modal-form-order:hover,
+  .btn-modal-form-order:focus {
+    background-color: #188ce8;
+  }
+  
